# sdl_cmake_setup

./: CMakeLists.txt
